--- a/.github/workflows/build_onefile.yml
+++ b/.github/workflows/build_onefile.yml
@@ -23,12 +23,9 @@ jobs:
       - name: Install deps
         run: |
           pip install wheel pyinstaller -U
-          wget https://nightly.link/AnotherFoxGuy/ogre/workflows/pip-build/pip/wheel-win.zip
-          7z x wheel-win.zip
-          pip install ogre_python-13.3.0-cp310-cp310-win_amd64.whl
 
       - name: Build
-        run: pyinstaller --onefile ogre_mesh_viewer.py
+        run: bash create_win_onefile.sh
 
       - name: Upload artifact
         uses: actions/upload-artifact@v2
